apps/dan-blog/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dan-blog
  labels:
    pod-security.kubernetes.io/enforce: baseline
